# learning_rust

./: .gitignore  .rustfmt.toml  01_println.rs  Cargo.toml  README.md  Readme.md  rmonTestSuite.sh  rustfmt.toml  script--compileAndRun.sh  testFormatting.rs  topic-signedUnsigned.md  trusty-rusty-snippets.txt
Lesson1/: 01_println  01_println.rs  02_Using_mutable_variable.rs  02_immutableError.rs  03_comment.rs  03_dataTypes.rs  04_if_else_supressWarings.rs  05_loop.rs  06_modulus.rs  07_iterator.rs  08_iterator.rs  09_iterator.rs  10_iterator.rs  11_supressWarnings.rs  12_iterator.rs  13_iterator.rs  14_iterator.rs  15_shadowing.rs  16_variable_print.rs  17_reference.rs  18_struct.rs  19_struct_enum.rs  20_pass_by_reference.rs  21_pass_by_value.rs  22_error_value_used_after_move.rs  23_error_resolved.rs  24_array.rs  25_array_withDatatype.rs  26_array_with_size_and_length.rs  27_impl_keyword.rs  28_string.rs  29_traits.rs  30_vectors.rs  31_readingfile.rs  32_cli_arguments.rs  33_printing_vector.rs  34_writing_to_file.rs  35_traits.rs  36_match_ie_switch_statement.rs  37_read_input.rs  (+16 more)
Lesson2/: Readme.txt
Lesson2/reqwest_testing/: Cargo.toml
Lesson2/reqwest_testing/src/: main.rs  main2.rs
programming-rust-by-example/: 1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  2.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  26.rs  27.rs  28.rs  29.rs  3.rs  30.rs  31.rs  32.rs  33.rs  34.rs  35.rs  36.rs  37.rs  38.rs  4.rs  5.rs  6.rs  (+3 more)
witter/witter-backend/: .env  Cargo.toml  README.md  rustfmt.toml
witter/witter-backend/src/: main.rs  t.rs
(+102 files in other folders)
