[package]
name = "reqwest_testing"
version = "0.1.0"
authors = ["Sahil Rajput <sahilrajput03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.0", features = ["blocking"]}
error-chain = "0.12.4"