[package]
name = "witter-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.10.0", features = ["attributes", "unstable"]}
chrono = "0.4.19"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.135", features = [ "derive" ]}
serde_json = "1.0.78"
# sqlx = {version = "0.5.10", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid" ]}
tide = "0.16.0"
uuid = "0.8.2"

# cargo add tide sqlx dotenv pretty_env_logger chrono log async-std